# CopyRight-Rust-CloudeFlare

./: Cargo.toml  Readme.md  package-lock.json
processor/: .gitignore  Cargo.toml  README.md
processor/src/: download.rs  main.rs
processor/src/audio/: extract.rs  mod.rs  shazam.rs
processor/src/fingerprint/: extract.rs  hash.rs  mod.rs  tests.rs
src/: main.rs
workers/queue-consumer/: Cargo.toml
workers/upload-api/: .gitignore  Cargo.toml  README.md  wrangler.toml
workers/upload-api/migrations/: 0001_initial.sql  0002_audio_hashes.sql
workers/upload-api/src/: lib.rs
