[package]
name = "processor"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.33", features = ["full"] }
axum = "0.8.8"
tower-http = { version = "0.5", features = ["cors", "trace"] }

serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

reqwest = { version = "0.12", features = ["json", "rustls-tls"] }

aws-sdk-s3 = "1"
aws-config = "1"

image = "0.23.14"
img_hash = "3.2"

tracing = "0.1"
tracing-subscriber = "0.3"

tempfile = "3.6"
anyhow = "1.0"
dotenv = "0.15.0"
symphonia = { version = "0.5.5", features = ["all"] }
rustfft = "6.4.1"
