[package]
name = "upload-api"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
worker = { version = "0.7.4", features = ["d1"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "1.6", features = ["v4", "js"] }
sqlx-d1 = { version = "0.3", features = ["macros"] }
